--- a/news/2017-05-11-osuweekly-103.md
+++ b/news/2017-05-11-osuweekly-103.md
@@ -23,7 +23,7 @@ Over 100 issues of the osu!weekly, 10 million users, and 10 years of unforgettab
 
 **Mentee applications for both [osu!standard](https://osu.ppy.sh/community/forums/topics/585200) and [osu!catch](https://osu.ppy.sh/community/forums/topics/585850) have started and we're primed to enter a new cycle!** For those of you who are desperately (like me) trying to up their game in the mapping community, what better opportunity is there than this? While mods are dime a dozen, it's not an exaggeration to say getting sincere opinions and critiques is a seldom received gift. If you are sincere in your pursuit of a better beatmap, head on over and apply today!
 
-**The osu!(lazer) development branch saw the introduction of the new expandable in-game mod overlay!** It might be quicker to just show you what I mean, but if you haven't yet, you should definitely follow the osu!dev blog for further updates on the new version of our game!
+**The osu!lazer development branch saw the introduction of the new expandable in-game mod overlay!** It might be quicker to just show you what I mean, but if you haven't yet, you should definitely follow the osu!dev blog for further updates on the new version of our game!
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/W0ewoQhBD7g" frameborder="0" allowfullscreen></iframe>
 
